# RAPID

./: .gitignore  README.md  environment.yml  pyproject.toml
docs/: layout_migration_mapping.md
mnt/data/: context.md  todo.md
src/rapid_irl_nav/: __init__.py
src/rapid_irl_nav/cli/: __init__.py  collect_expert.py  evaluate.py  train.py  validate_dataset.py  view_episode.py
src/rapid_irl_nav/configs/: __init__.py  training.yaml
src/rapid_irl_nav/data/: __init__.py  datamodule.py  format.md  record.py  schemas.py  transforms.py
src/rapid_irl_nav/irl/: __init__.py  buffers.py  lsiq.py  sac.py  trainer.py
src/rapid_irl_nav/model/: __init__.py  actor_critic.py  autoencoder.py  encoders.py  init.py
src/rapid_irl_nav/sim/: __init__.py  controller.py  interfaces.py  toy_world.py  traj_utils.py
src/rapid_irl_nav/utils/: __init__.py  geometry.py  logging.py  seeding.py  viz.py
src/rapid_v2/: __init__.py  env_builder.py  randomization_utils.py
src/rapid_v2/config/: __init__.py  env.yml  randomization.yml  vehicle.yml
src/rapid_v2/tools/: __init__.py  smoke_env.py
tests/: test_layout_bridge.py
